@@ -99,8 +99,6 @@ typedef enum ipmi_driver_type ipmi_driver_type_t;
 #define IPMI_WORKAROUND_FLAGS_CHECK_UNEXPECTED_AUTHCODE   0x00000004
 #define IPMI_WORKAROUND_FLAGS_BIG_ENDIAN_SEQUENCE_NUMBER  0x00000008
 #define IPMI_WORKAROUND_FLAGS_AUTHENTICATION_CAPABILITIES 0x00000010
-#define IPMI_WORKAROUND_FLAGS_IGNORE_SOL_PAYLOAD_SIZE     0x00010000
-#define IPMI_WORKAROUND_FLAGS_IGNORE_SOL_PORT             0x00020000
 #define IPMI_WORKAROUND_FLAGS_INTEL_2_0_SESSION           0x01000000
 #define IPMI_WORKAROUND_FLAGS_SUPERMICRO_2_0_SESSION      0x02000000
 #define IPMI_WORKAROUND_FLAGS_SUN_2_0_SESSION             0x04000000
